tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_implementation_duplicate_method/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Duplicate definitions of trait associated function with name default found
   ┌─ src/main.nr:13:12
   │
13 │         fn default(x: Field, y: Field) -> Field {
   │            ------- First trait associated function found here
   ·
17 │         fn default(x: Field, y: Field) -> Field {
   │            ------- Second trait associated function found here
   │

Aborting due to 1 previous error
